use eex_html package

--- a/lib/raxx/not_found.html.eex
+++ b/lib/raxx/not_found.html.eex
@@ -8,13 +8,13 @@ defmodule <%= Macro.to_string(example_module) %> do
   def handle_request(%{method: :GET, path: []}, _state) do
     Raxx.response(:ok)
     |> Raxx.set_header("content-type", "text/html")
-    |> Raxx.set_body(<%= EEx.HTML.escape_to_binary("<h1>Home Page</h1>") %>)
+    |> Raxx.set_body(<%= EExHTML.escape_to_binary("<h1>Home Page</h1>") %>)
   end
 
   def handle_request(_request, _state) do
     Raxx.response(:not_found)
     |> Raxx.set_header("content-type", "text/html")
-    |> Raxx.set_body(<%= EEx.HTML.escape_to_binary("<h1>Ooops! Page not found.</h1>") %>)
+    |> Raxx.set_body(<%= EExHTML.escape_to_binary("<h1>Ooops! Page not found.</h1>") %>)
   end
 end
 </pre>
